@@ -35,11 +35,10 @@ import java.security.interfaces.ECPrivateKey;
 import java.security.interfaces.RSAPrivateKey;
 import java.util.ArrayList;
 import java.util.HashMap;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import javax.crypto.interfaces.DHPrivateKey;
-import org.bouncycastle.crypto.tls.Certificate;
+import org.bouncycastle.tls.crypto.TlsCertificate;
 
 public class CertificateDelegate extends Delegate {
 
@@ -152,15 +151,12 @@ public class CertificateDelegate extends Delegate {
         }
         try {
             KeyStore store = KeystoreHandler.loadKeyStore(keystore, password);
-            Certificate cert = JKSLoader.loadTLSCertificate(store, alias);
+            TlsCertificate cert = JKSLoader.loadTLSCertificate(store, alias);
             privateKey = (PrivateKey) store.getKey(alias, password.toCharArray());
-            List<CertificateBytes> byteList = new LinkedList<>();
-            for (org.bouncycastle.asn1.x509.Certificate tempCert : cert.getCertificateList()) {
-                byteList.add(new CertificateBytes(tempCert.getEncoded()));
-            }
+            List<CertificateBytes> byteList = List.of(new CertificateBytes(cert.getEncoded()));
 
             config.setDefaultExplicitCertificateChain(byteList);
-            adjustPrivateKey(config.getCertificateChainConfig().get(0), privateKey);
+            adjustPrivateKey(config.getCertificateChainConfig().getFirst(), privateKey);
         } catch (UnrecoverableKeyException
                 | KeyStoreException
                 | IOException
